added font awesome pro

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="https://kit-pro.fontawesome.com/releases/v5.12.1/css/pro.min.css">
   </head>
   <body>
     <noscript>
